<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>se.csn</groupId>
    <artifactId>notmotor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../NotmotorBuild</relativePath>
  </parent>

  <groupId>se.csn.notmotor</groupId>
  <artifactId>notmotoriplejb</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>ejb</packaging>

  <name>NotmotorIplEjb</name>
  <url>notmotor-ejb/</url>
  <inceptionYear>2008</inceptionYear>
  <organization>
    <name>Centrala studiestödsnämnden</name>
    <url>http://www.csn.se/</url>
  </organization>
  <!--  Lägg till dependencies 
	-->
  <dependencies>
    <!-- 		<dependency> -->
    <!-- 		  	<groupId>com.ibm.websphere</groupId> -->
    <!-- 			<artifactId>j2ee</artifactId> -->
    <!-- 	  		<version>8.0</version> -->
    <!-- 	  		<scope>provided</scope> -->
    <!-- 	  	</dependency>	 -->
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>notmotoriplclient</artifactId>
      <version>2.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>ark</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.8</version>
    </dependency>
    <!-- 	  	<dependency> -->
    <!-- 		  	<groupId>axis</groupId> -->
    <!-- 			<artifactId>axis</artifactId> -->
    <!-- 	  		<version>1.3</version> -->
    <!-- 	  	</dependency> -->
    <!-- 	  	<dependency> -->
    <!-- 			<groupId>com.ibm</groupId> -->
    <!-- 			<artifactId>mqjms</artifactId> -->
    <!-- 		  	<version>7.0.1.5</version> -->
    <!-- 		  	<scope>provided</scope> -->
    <!-- 		</dependency> -->
  </dependencies>

  <build>
   
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/resources/</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
        <directory>${project.basedir}/src/main/resources/META-INF</directory>
        <targetPath>META-INF</targetPath>
        <includes>
          <include>ibm-ejb-jar-bnd.xml</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-ejb-plugin</artifactId>
        <configuration>
          <ejbVersion>3.1</ejbVersion>
          <archive>
            <!-- 
							Se till att tillfoga alla dependencies i classpath.
							Default är false för denna property.
						-->
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
     <release>11</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>